[gd_scene load_steps=20 format=3 uid="uid://bls782qtfuo7f"]

[ext_resource type="Texture2D" uid="uid://eco5kpy4bhey" path="res://assets/terrains/Dark/texture_04.png" id="1_fycht"]
[ext_resource type="Script" path="res://levels/level_02/level_02_manager.gd" id="1_n31lk"]
[ext_resource type="PackedScene" uid="uid://jkytk54paja8" path="res://player/player.tscn" id="2_bl2av"]
[ext_resource type="Texture2D" uid="uid://cx7gvislhac4a" path="res://assets/tutorial/larry-missed.png" id="3_allt0"]
[ext_resource type="Texture2D" uid="uid://dbcy5vpwvrbdy" path="res://assets/tutorial/be-careful-barry.png" id="3_jal2d"]
[ext_resource type="Texture2D" uid="uid://chcumhpj33k43" path="res://assets/terrains/Purple/texture_05.png" id="4_vlsmf"]
[ext_resource type="Texture2D" uid="uid://c3pug8rfby5ai" path="res://assets/tutorial/run_run.png" id="5_5w5ql"]
[ext_resource type="PackedScene" uid="uid://bhbeevqymkb3t" path="res://button/world_button.tscn" id="5_p234p"]
[ext_resource type="Texture2D" uid="uid://cksywmte1hkxq" path="res://assets/terrains/Purple/texture_10.png" id="6_ky6wg"]
[ext_resource type="PackedScene" uid="uid://c7occw257ygik" path="res://victory_zone/vicotry_zone.tscn" id="7_cu7sa"]
[ext_resource type="PackedScene" uid="uid://bhfbs0a8pr0ih" path="res://menus/pause_menu/pause_menu.tscn" id="11_hv1a6"]
[ext_resource type="PackedScene" uid="uid://ddk3fhp0xs5mg" path="res://menus/victory_menu/victory_menu.tscn" id="12_8gquw"]
[ext_resource type="AudioStream" uid="uid://cp8adc3w7y14s" path="res://assets/music/level2.wav" id="13_53886"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o786x"]
albedo_texture = ExtResource("1_fycht")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gpvhs"]
albedo_texture = ExtResource("4_vlsmf")

[sub_resource type="Animation" id="Animation_5gnce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-10.6897, 2.32592, 5.89405)]
}

[sub_resource type="Animation" id="Animation_3w3q4"]
resource_name = "open"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-10.6897, 2.32592, 5.89405), Vector3(-10.6897, 2.32592, 14.3818)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vg1b4"]
_data = {
"RESET": SubResource("Animation_5gnce"),
"open": SubResource("Animation_3w3q4")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8koa2"]
albedo_texture = ExtResource("6_ky6wg")

[node name="level_02" type="Node3D"]
script = ExtResource("1_n31lk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.792096, -0.598191, -0.121458, -0.350116, 0.282256, 0.893169, -0.500003, 0.749999, -0.43301, 0, 13.0854, 0)
shadow_enabled = true

[node name="terrain" type="CSGBox3D" parent="."]
transform = Transform3D(62.11, 0, 0, 0, 0.171957, 0, 0, 0, 21.4503, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_o786x")
use_collision = true
collision_layer = 2

[node name="wall" type="CSGBox3D" parent="terrain"]
transform = Transform3D(0.999998, 0, 0, 0, 42.4305, 0, 0, 0, 0.0216598, 0, 21.739, -0.488179)

[node name="Sprite3D" type="Sprite3D" parent="terrain/wall"]
transform = Transform3D(0.0208738, 0, 0, 0, 0.159551, 0, 0, 0, 1, -0.3562, 0, 0.807207)
texture = ExtResource("3_jal2d")

[node name="wall2" type="CSGBox3D" parent="terrain"]
transform = Transform3D(0.999998, 0, 0, 0, 42.4305, 0, 0, 0, 0.0216598, 0, 21.739, 0.490448)

[node name="wall3" type="CSGBox3D" parent="terrain"]
transform = Transform3D(0.0128285, 0, 0, 0, 42.4305, 0, 0, 0, 0.986423, -0.495859, 21.739, -0.00543706)

[node name="Sprite3D" type="Sprite3D" parent="terrain/wall3"]
transform = Transform3D(-2.47251e-09, 0, 1, 0, 0.132495, 0, -0.0565645, 0, -4.37115e-08, 0.513271, 0.0724718, 0)
texture = ExtResource("3_allt0")

[node name="wall5" type="CSGBox3D" parent="terrain"]
transform = Transform3D(0.0128285, 0, 0, 0, 42.4305, 0, 0, 0, 0.986423, 0.49406, 21.739, -0.00543706)

[node name="wall4" type="CSGBox3D" parent="terrain"]
transform = Transform3D(0.0128285, 0, 0, 0, 42.4305, 0, 0, 0, 0.560571, -0.173385, 21.739, -0.216019)

[node name="Sprite3D" type="Sprite3D" parent="terrain/wall4"]
transform = Transform3D(-3.94026e-09, 0, 1, 0, 0.141735, 0, -0.0901427, 0, -4.37114e-08, 0.583167, 0, 0)
texture = ExtResource("5_5w5ql")

[node name="player" parent="." instance=ExtResource("2_bl2av")]
transform = Transform3D(0.0986598, 0, 0.995121, 0, 1, 0, -0.995121, 0, 0.0986598, 26.8541, -0.238854, -0.196462)

[node name="especial_door" type="CSGBox3D" parent="."]
transform = Transform3D(0.375691, 0, 0, 0, 5.38871, 0, 0, 0, 9.19333, -10.6897, 2.32592, 5.89405)
material_override = SubResource("StandardMaterial3D_gpvhs")
use_collision = true
collision_layer = 2

[node name="door_animator" type="AnimationPlayer" parent="especial_door"]
libraries = {
"": SubResource("AnimationLibrary_vg1b4")
}

[node name="purple_button" parent="." instance=ExtResource("5_p234p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.2297, 0.270052, -8.4245)

[node name="button" parent="purple_button" index="1"]
material_override = SubResource("StandardMaterial3D_8koa2")

[node name="victory_zone" parent="." instance=ExtResource("7_cu7sa")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, -27.1339, 0.0837288, -4.51564)

[node name="pause_menu" parent="." instance=ExtResource("11_hv1a6")]
visible = false
level_path = "res://levels/level_02/level_02.tscn"

[node name="level_name" parent="pause_menu/menu" index="1"]
text = "Level 02"

[node name="victory_menu" parent="." instance=ExtResource("12_8gquw")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_53886")
volume_db = -10.0
autoplay = true

[editable path="purple_button"]
[editable path="pause_menu"]
